--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     </div>
 
 
-    <script src="../js/app.js"></script>
+    <script type="module" src="./js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- TOAST ----------------------------------------------------------------------------------------------------------->
